test/fixtures/public/analysis/success/import_super.jmm
import java.io.File;
import Parent;

class Child extends Parent {

}