test/fixtures/public/analysis/fail/import_super.jmm
import java.io.File;

class Child extends Parent {

}